    jadetex, ko.tex-base and cm-super as well. Closes: #871751
  * Set forgotten conditions 'bootable-usb' and 'isohybrid-supported' for 
    arm64.
  * Remove chapter 'Booting from USB with U-Boot' for armel, is not supported
    there. Closes: #864848
  * Remove "Checked/not checked for <arch>" warnings except for hurd and
    kfreebsd variants. Closes: #868357

  [ Martin Michlmayr ]
  * Remove QNAP TS-109, TS-209 and TS-409 as they are no longer supported.

 -- Samuel Thibault <sthibault@debian.org>  Tue, 20 Jun 2017 01:17:02 +0200

installation-guide (20170614) unstable; urgency=medium

  [ Holger Wansing ]
  * Updated translation for Chinese (simplified), by Yangfl
    <mmyangfl@gmail.com>.

 -- Samuel Thibault <sthibault@debian.org>  Wed, 14 Jun 2017 10:53:14 +0200

installation-guide (20170607) unstable; urgency=medium

  [ Holger Wansing ]
  * Update documentation on device nodes for CD-ROM drives. Closes: #864038
  * Set condition 'unofficial' for 'What is Debian GNU/kFreeBSD' chapter. 
    Closes: #864040

 -- Samuel Thibault <sthibault@debian.org>  Wed, 07 Jun 2017 23:05:12 +0200

installation-guide (20170525) unstable; urgency=medium

  [ Holger Wansing ]
  * Some '>' changed into '&gt;' within <informalexample> tags, to get
    them correctly processed.
  * Add missing CSS style for <tip> tag. Closes: #860180

 -- Samuel Thibault <sthibault@debian.org>  Thu, 25 May 2017 12:26:18 +0200

installation-guide (20170419) unstable; urgency=medium

  [ Samuel Thibault ]
  * Re-enable Dutch translation.  Thanks a lot to Frans Spiesschaert!
  * Document shortcuts for expert, rescue, and automated installation with
    accessibility.
  * Update distrib name about the absence of graphical installer on arm64.
  * Drop the note about USB not being supported on Mustang, that was fixed.

  [ Geert Stappers ]
  * Add header to preseed file. Closes: #859438

  [ Holger Wansing ]
  * Set TMPDIR variable, to get dblatex debugging files removed after pdf