@@ -334,7 +334,7 @@ set up the language locale, network, and disk partitions.
   </sect3>
   </sect2>
 
-  <sect2 arch="ia64" id="boot-tftp"><title>Booting with TFTP</title>
+  <sect2 arch="ia64" id="boot-tftp-ia64"><title>Booting with TFTP</title>
 
 <para>
 Booting an IA-64 system from the network is similar to a CD boot.
