@@ -2,7 +2,7 @@
 <!-- $Id$ -->
 
 
-  <sect2 arch="mips;mips64el;mipsel" id="boot-tftp"><title>Booting with TFTP</title>
+  <sect2 arch="mips;mips64el;mipsel" id="boot-tftp-mips"><title>Booting with TFTP</title>
 
 &boot-installer-intro-net.xml;
  
