@@ -133,7 +133,7 @@ doesn't work. The &debian; installation program should start.
    </sect3>
   </sect2>
 
-  <sect2 arch="powerpc" condition="bootable-usb" id="usb-boot">
+  <sect2 arch="powerpc" condition="bootable-usb" id="usb-boot-powerpc">
   <title>Booting from USB memory stick</title>
 <para>
 
@@ -193,7 +193,7 @@ report, as explained in <xref linkend="submit-bug"/>.
 </para></warning>
   </sect2>
 
-  <sect2 arch="powerpc" id="boot-tftp"><title>Booting with TFTP</title>
+  <sect2 arch="powerpc" id="boot-tftp-powerpc"><title>Booting with TFTP</title>
 
 &boot-installer-intro-net.xml;
 
