@@ -1,7 +1,7 @@
 <!-- retain these comments for translator revision tracking -->
 <!-- $Id$ -->
 
-  <sect2 arch="sparc" id="boot-tftp"><title>Booting with TFTP</title>
+  <sect2 arch="sparc" id="boot-tftp-sparc"><title>Booting with TFTP</title>
 
 &boot-installer-intro-net.xml;
 
