@@ -1,7 +1,7 @@
 <!-- retain these comments for translator revision tracking -->
 <!-- $Id$ -->
 
-  <sect2 arch="any-x86" condition="bootable-usb" id="usb-boot">
+  <sect2 arch="any-x86" condition="bootable-usb" id="usb-boot-x86">
   <title>Booting from USB Memory Stick</title>
 
 &boot-installer-intro-usb.xml;
@@ -254,7 +254,7 @@ contents are loaded into memory. The installer program
 </para>
   </sect2>
 
-  <sect2 arch="x86" id="boot-tftp"><title>Booting with TFTP</title>
+  <sect2 arch="x86" id="boot-tftp-x86"><title>Booting with TFTP</title>
 
 &boot-installer-intro-net.xml;
 
@@ -448,7 +448,7 @@ still be used from the boot prompt which is shown after selecting the
 </para><para arch="any-x86">
 
 There is also a graphical installer image that can be netbooted. And there
-is a special <quote>mini</quote> ISO image<footnote id="gtk-miniiso">
+is a special <quote>mini</quote> ISO image<footnote id="gtk-miniiso-x86">
 
 <para>
 The mini ISO image can be downloaded from a &debian; mirror as described
@@ -461,7 +461,7 @@ Look for <filename>netboot/gtk/mini.iso</filename>.
 </para><para arch="powerpc">
 
 For &arch-title;, currently only an experimental <quote>mini</quote> ISO
-image is available<footnote id="gtk-miniiso">
+image is available<footnote id="gtk-miniiso-powerpc">
 
 <para>
 The mini ISO image can be downloaded from a &debian; mirror as described
