@@ -2,7 +2,7 @@
 <!-- $Id$ -->
 
 
-  <sect2 arch="arm64" id="boot-dev-select"><title>Boot Device Selection</title>
+  <sect2 arch="arm64" id="boot-dev-select-arm64"><title>Boot Device Selection</title>
 
     <para>
 <!-- placeholder, content to be added -->
