@@ -17,7 +17,7 @@ stating which key to press to enter the setup screen.
 </para>
   </sect2>
   
-  <sect2 arch="any-x86" id="boot-dev-select"><title>Boot Device Selection</title>
+  <sect2 arch="any-x86" id="boot-dev-select-i386"><title>Boot Device Selection</title>
 
 <para>
 
