@@ -24,6 +24,8 @@ installation-guide (2017XXXX) UNRELEASED; urgency=medium
     there. Closes: #864848
   * Remove "Checked/not checked for <arch>" warnings except for hurd and
     kfreebsd variants. Closes: #868357
+  * Fix "ID xxx-yyy already defined" validation errors by making IDs unique
+    for the whole manual. Closes: #880210
 
   [ Martin Michlmayr ]
   * Remove QNAP TS-109, TS-209 and TS-409 as they are no longer supported.
